# hng13-stage4-notification-system

./: README.md  docker-compose.yml
services/api_gateway/: .gitignore  Cargo.toml  Dockerfile
services/api_gateway/api-gateway/: Dockerfile
services/api_gateway/src/: config.rs  handlers.rs  main.rs  middleware.rs  models.rs  mq.rs  status.rs
services/email-service/: Dockerfile  requirements.txt
services/email-service/app/: consumer.py  main.py  smtp_handler.py
services/shared/: utils.py
services/user-service/: .env  Dockerfile  QUICK_START.md  requirements.txt
services/user-service/app/: __init__.py  auth.py  config.py  database.py  main.py  models.py  redis_client.py  schemas.py
