[package]
name = "api_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web + CORS
actix-web = "4"
actix-cors = "0.7"

# Logging
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"                   
# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# AMQP
lapin = { version = "^2.3", default-features = false, features = ["rustls",] }
futures-util = "0.3"

deadpool-redis = { version = "0.14", features = ["rt_tokio_1"] }

# Runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
num_cpus = "1"

# Errors & config
thiserror = "1"
anyhow = "1"
dotenvy = "0.15"            
envy = "0.4"                 