[package]
name = "api_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
lapin = "2"
futures-util = "0.3"
redis = { version = "0.24", features = ["tokio-comp"] }
deadpool-redis = { version = "0.14", features = ["rt_tokio_1"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
thiserror = "1"
anyhow = "1"
dotenvy = "0.15"
env_logger = "0.11"
num_cpus = "1.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


